--- a/app/src/main/res/layout/item_tarefa.xml
+++ b/app/src/main/res/layout/item_tarefa.xml
@@ -1,6 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <TextView
+        android:id="@+id/tv_itemtitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/azul"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Teste de Texto"/>
+
+    <TextView
+        android:id="@+id/tv_itemdatahora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/lilas"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/tv_itemtitulo"
+        app:layout_constraintTop_toBottomOf="@id/tv_itemtitulo"
+        tools:text="01/01/2022 15:30"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/img_mais"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_more"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
