--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:id="@+id/empty_state"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:visibility="gone"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <TextView
+        android:id="@+id/tv_menssagem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/tarefa_texto"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColor="@color/azul"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/iv_img"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+<androidx.appcompat.widget.AppCompatImageView
+    android:id="@+id/iv_img"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tv_menssagem"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/ic_cloud_computing_7"
+    />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
