--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<item android:id="@+id/editar"
+    android:title="@string/editar"
+    android:icon="@drawable/ic_more"
+    android:iconTint="@color/azul"
+    />
+    <item android:id="@+id/apagar"
+        android:title="@string/apagar"
+        android:icon="@drawable/ic_navigate"
+        android:iconTint="@color/lilas"
+        />
 </menu>
